# smartmcplint

./: .gitignore  README.md  pyproject.toml  smartmcplint.example.yaml  smartmcplint_discussion.md
src/smartmcplint/: __init__.py  cli.py  client.py  config.py  scanner.py  transport.py
src/smartmcplint/engines/: __init__.py  autofix.py  base.py  behavior.py  conformance.py  quality.py  security.py
src/smartmcplint/models/: __init__.py  config.py  enums.py  findings.py  mcp.py  results.py
src/smartmcplint/utils/: __init__.py  llm.py
tests/fixtures/: bad_server.py  good_server.py
tests/integration/: test_scan_end_to_end.py
tests/unit/: test_scanner.py
tests/unit/engines/: test_autofix.py  test_behavior.py  test_conformance.py  test_quality.py  test_security.py
