[project]
name = "smartmcplint"
version = "0.1.0"
description = "Intelligent MCP Server Quality & Compliance Scanner"
readme = "README.md"
authors = [
    { name = "Sachin Mehrotra", email = "sachin2040@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "litellm>=1.40",
]

[project.scripts]
smartmcplint = "smartmcplint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
