[project]
name = "smartmcplint"
version = "0.1.0"
description = "Intelligent MCP Server Quality & Compliance Scanner"
readme = "README.md"
authors = [
    { name = "Sachin Mehrotra", email = "sachin2040@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "litellm==1.82.6",
    "httpx>=0.27",
]

[project.scripts]
smartmcplint = "smartmcplint.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live subprocess (slow)",
]
